--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
   </div>
 
   <!-- Audio for the alert -->
-  <audio id="alarmSound" src="veryloudairhorn.mp3" preload="auto"></audio>
+  <audio id="alarmSound" src="samsung-galaxy-morning-flower.mp3" preload="auto"></audio>
 
   <script>
     let interval;
